@@ -7,3 +7,7 @@
 <p>7.</p>
 <p>8. User comments</p>
 <p>9. Media</p>
+<p>10. Fran&ccedil;ais</p>
+<p>11. French</p>
+<p>12. 99</p>
+<p>13. Fran&ccedil;ais</p>
